feat: improved chunk section class